# atarihns

./: README.md  pyproject.toml
atarihns/: Environment.py  __init__.py  constants.py  helpers.py
atarihns/functions/: __init__.py  calculate_hns.py  check_environment_existence.py  get_human_score.py  get_random_score.py  get_scores.py  refine_environment_name.py
scripts/: random_play.py
