[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atarihns"
version = "0.0.17"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "A little helper to calculate human normalized score for different ALE environments efficiently."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
keywords = ["reinforcement learning", "atari", "human normalized score", "hns score"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/atarihns", Repository="https://github.com/tahashieenavaz/atarihns", Documentation="https://github.com/tahashieenavaz/atarihns#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
atarihns = ["*.md", "*.txt"]
